--- a/static/css/bid_buyer.css
+++ b/static/css/bid_buyer.css
@@ -1,8 +1,10 @@
-*{
-    padding: 0;
+*
+{
     margin: 0;
+    padding: 0;
 }
 
+/*Navigation Bar*/
 html{
     height: 100%;
     width: 100%;
@@ -16,11 +18,13 @@ html{
     }
 }
 .navbar {
-    padding: 0.3% ;
+    padding: 0.5% ;
     padding-left: 5%;
     padding-right: 2%;
+    position: relative;
     display: flex;
-    background-color: whitesmoke;
+    background-color: #ccccff;
+    height: 3.5rem;
     max-width: 100%;
     box-shadow: 0 0 8px 0 grey;
     justify-content: space-around;
@@ -55,24 +59,23 @@ html{
     color: black;
 }
 #a2{
-    margin-left: 20%;
+    margin-left: 30%;
 }
 .navbar a:hover{
     color: #646262;
 }
 .carim
 {
-    height: 90%;
-    padding-left: 20%;
-    margin: auto;
+    
+    margin-top: 50%;
    
 }
 .carim1
 {
-    width: 80%;
-    height: 40%;
-    margin: auto;
-   
+    width: auto;
+    height: 25px;
+    /* margin-bottom: 50%; */
+    margin-top: 70%;
 }
 .navbar form{
     top: 0;
@@ -101,10 +104,12 @@ display: flex;
 }
 
 #search-btn{
-    top:10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 20%;
     height: 100%;
-    padding: 5px;
+    padding: 8px;
     border: none;
     outline: none;
     cursor: pointer;
@@ -135,14 +140,11 @@ display: flex;
     width: 30%;
 }
 
-
-
 /*Profile dropdown*/
 
 .profile
 {
     color: #000;
-    padding: 10px;
     font-size: 25px;
     border: none;
     font-family: 'Dongle', sans-serif;
@@ -208,7 +210,7 @@ display: flex;
 {
     width: 80%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding: 50px 5vw;
 }
 .card
@@ -235,8 +237,7 @@ display: flex;
 
 .edit-img img
 {
-    width: 100%;
-    object-fit: cover;
+    object-fit:fill;
     cursor: pointer;
     position: relative;
     border:2px solid #fff;
