--- a/static/css/cart.css
+++ b/static/css/cart.css
@@ -209,174 +209,206 @@
 
 
 /*Navigation Bar*/
-
+html{
+  height: 100%;
+  width: 100%;
+}
 @keyframes ex{
-    0%{ 
-        margin-top: 400px;
-    }
-    100%{
-        margin-top: 0;
-    }
+  0%{ 
+      margin-top: 400px;
+  }
+  100%{
+      margin-top: 0;
+  }
 }
 .navbar {
-    padding: 8px;
-    background-color: whitesmoke;
-    height: 2.8rem;
-    max-width: 100%;
-    box-shadow: 0 0 8px 0 grey;
-   // position: -webkit-sticky; 
-    position: sticky;
-    top:0;
-    animation: ex;
-    animation-duration: 0.5s;
+  padding: 0.5% ;
+  padding-left: 5%;
+  padding-right: 2%;
+  position: relative;
+  display: flex;
+  background-color: #ccccff;
+  height: 3.5rem;
+  max-width: 100%;
+  box-shadow: 0 0 8px 0 grey;
+  justify-content: space-around;
+  top:0;
+  animation: ex;
+  animation-duration: 0.5s;
 }
 .navbar ul{
-    left:1%;
-    display: flex;
-    width:100%;
-    list-style: none;
-    flex-wrap: nowrap;
-    font-family: 'Dongle', sans-serif;
-    font-size: 1.8rem;
-    max-height: 100%;
-    justify-content: space-between;
-    text-align: center;
-  
+
+  display: flex;
+  flex-wrap: wrap;
+  width:100%;
+  list-style: none;
+  justify-content: space-between;
+  align-items: center;
+  font-family: 'Dongle', sans-serif;
+  font-size: 1.8rem;
+
+
 }
 .navbar li{
-    margin-top: 0.16em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
 }
 .navbar a{
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 #a1{
-    margin-left: 1%;
-    color: black;
+  color: black;
 }
 #a2{
-    margin-left:30%;
+  margin-left: 30%;
 }
 .navbar a:hover{
-    color: #646262;
+  color: #646262;
+}
+.carim1
+{
+  width: auto;
+  height: 25px;
+}
+.searching{
+  align-items: center;
 }
 .navbar form{
-    top: 0;
-    display: flex;
-    flex-wrap: nowrap;
+  top: 0;
+  display: flex;
+  flex-wrap: nowrap;
+  height: 2vw;
+  align-items: center;
 }
-.search{
+/*.search{
 width: 500px;
 display: flex;
-}
+}*/
 
 .search-box{
-    top:10%;
-    width: 100%;
-    height: 17px;
-    padding: 10px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border: none;
-    text-transform: capitalize;
-    background: white;
-    color: #a9a9a9;
-    outline: none;
+  /*top:10%;*/
+  width: 100%;
+  height: 100%;
+  padding-left: 3%;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border: none;
+  text-transform: capitalize;
+  background: white;
+  color: #a9a9a9;
+  outline: none;
 }
 
 #search-btn{
-    top:10%;
-    width: 20%;
-    height: 17 px;
-    padding: 5px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    background: #383838;
-    color: #fff;
-    text-transform: capitalize;
-    font-size: 15px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20%;
+  height: 100%;
+  padding: 8px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background: #383838;
+  color: #fff;
+  text-transform: capitalize;
+  font-size: 15px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 #a3 button{
-    border:none;
-    background:none;
-    cursor: pointer;
+  border:none;
+  background:none;
+  cursor: pointer;
 }
 .search-box::placeholder{
-    color: #a9a9a9;
+  color: #a9a9a9;
 }
 #login{
-    display: none;
-    width: 60%;
-    border: 2px solid;
+  display: none;
+  width: 60%;
+  border: 2px solid;
 }
 .login_karo
 {
-    position: relative;
-	transition: all 5s ease-in-out;
-    width: 30%;
+  position: relative;
+transition: all 5s ease-in-out;
+  width: 30%;
 }
 
 /*Profile dropdown*/
 
 .profile
 {
-    color: #000;
-    padding: 10px;
-    font-size: 25px;
-    border: none;
-    font-family: 'Dongle', sans-serif;
+  color: #000;
+  font-size: 25px;
+  border: none;
+  font-family: 'Dongle', sans-serif;
 }
 
 .profile:hover
 {
-    color: #646262;
+  color: #646262;
 }
 
 .profile_dropdown 
 {
-    position: relative;
-    display: flexbox;
-   
+  position: relative;
+  display: flexbox;
+ 
 }
 
 .profile-content 
 {
-    display: none;
-    position: absolute;
-    background-color: #fff;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    right: 30%;
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  right: 30%;
 }
-  
+
 .profile-content a 
 {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
 }
 
 .profile-content a:hover {
-    background-color: #ddd;
+  background-color: #ddd;
 }
 
 .profile_dropdown:hover .profile-content 
 {
-    display: block;
+  display: block;
 }
 
 .profile_.dropdown .profile {
-    background-color: #000;
+  background-color: #000;
 }
+
 .box-sz{
   background-color: #f3f3ff;
 }
 
 .col-md-7{
   background-color: #f3f3ff;
+}
+.img-sz{
+  width: 100%;
+}
+.col-md-6{
+  margin-left: 5px;
+}
+.mid2-sz{
+  padding-left: 4%;
+}
+.mid3-sz{
+  padding-left: 4%;
 }
