--- a/static/css/merchandise.css
+++ b/static/css/merchandise.css
@@ -42,7 +42,7 @@ html{
 
     font-family: 'Dongle', sans-serif;
     font-size: 1.8rem;
-  
+
   
 }
 .navbar li{
@@ -58,33 +58,30 @@ html{
 #a1{
     color: black;
 }
-
 #a2{
     margin-left: 30%;
 }
-
 .navbar a:hover{
     color: #646262;
 }
-
 .carim
 {
-    /* width: 70%; */
+    
     margin-top: 50%;
+   
 }
 .carim1
 {
-    width: 80%;
-    margin-top: 50%;
+    width: auto;
+    height: 25px;
+    /* margin-bottom: 50%; */
+    margin-top: 70%;
 }
-
-.navbar form
-{
-    margin-top: 1%;
+.navbar form{
+    top: 0;
     display: flex;
     flex-wrap: nowrap;
     height: 2vw;
-    font-size: 30px;
     align-items: center;
 }
 /*.search{
@@ -93,11 +90,10 @@ display: flex;
 }*/
 
 .search-box{
-    /* top:10%; */
+    /*top:10%;*/
     width: 100%;
     height: 100%;
     padding-left: 3%;
-    /* margin-left: 10%; */
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border: none;
@@ -108,10 +104,12 @@ display: flex;
 }
 
 #search-btn{
-    top:10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 20%;
     height: 100%;
-    /* margin-left: 10%; */
+    padding: 8px;
     border: none;
     outline: none;
     cursor: pointer;
@@ -147,7 +145,6 @@ display: flex;
 .profile
 {
     color: #000;
-    padding: 10px;
     font-size: 25px;
     border: none;
     font-family: 'Dongle', sans-serif;
@@ -197,25 +194,41 @@ display: flex;
     background-color: #000;
 }
 
+/*categories
+
+.cat-title
+{
+    padding: 10px;
+    width: 18%;
+    height: 200px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+   
+    margin: 20px 20px;
+}
 
 
 
+Product Card
 
-
-/*Product Card
-
-.card{
+.product_card{
     padding: 0 10vw;
     display: flex;
     overflow-x: auto;
     scroll-behavior: smooth;
     flex-wrap: wrap;
-    
+    margin: 20px;
+    border-radius:25px ;
+    padding: 60px 20px;
+    overflow: visible;
+    background-color: #fff;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+    width: 300px;
+    margin-bottom: 30px;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
-.card::-webkit-scrollbar{
-    display: none;
-}
+
 
 a:link
 {
@@ -229,7 +242,7 @@ a:visited
     text-decoration: none;
 }
 
-.product_card{
+.product_container{
     flex: 0 0 auto;
     width: 300px;
     height: 462px;
@@ -239,11 +252,16 @@ a:visited
     transition: 0.3s;
     width: 22%;
     margin-bottom: 1.5rem;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    display:inline-flex; 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .product_card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(98, 92, 92, 0.2);
   }
-
 
 .image{
     position: relative;
@@ -262,7 +280,21 @@ a:visited
     object-fit: cover;
 }
 
-
+.button_class{
+    display: flex;
+    flex-direction: column;
+}
+.buttons{
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    cursor: pointer;
+    width: 47%;
+    font-size: 15px;
+    float: left;
+    margin-left: 25%;
+    border-radius: 10px;
+}
 
 .product_card:hover .buttons{
     opacity: 1;
@@ -295,28 +327,23 @@ a:visited
     margin-bottom: 0.7rem;
 }
 */
-.buttons{
-    width: 47%;
-    float: left;
-    margin-left: 3%;
+.card{
     display: flex;
-    color: white;
+    background-color: #fff;
 }
-.button_correct {
-    color: white;
-}
-.product_container {
-    display: flex;
+.product-container {
+    display:flex;
     flex-wrap: wrap;
-    justify-content: flex;
-    background-color: white;
-    position: static;
+    justify-content: space-around;
   }
-  
+  body{
+    background-color: #ffffff;
+  }
   .product_card {
     background-color: #f3f3ff;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
     width: 300px;
+    height: 450px;
     margin-top: 2vw;
     margin-bottom: 2vw;
     margin-right: 1vw;
@@ -325,22 +352,22 @@ a:visited
     overflow: hidden;
     display: inline-block;
   }
-  
+
   .product_card .image {
-    width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
   .product_card .image img {
-    max-width: 100%;
-    max-height: 100%;
+    margin-top: 20px;
+    width: 260px;
+    height: 260px;
+    border-radius: 10px;
   }
   
   .product_card .details {
-    padding: 20px;
+    padding: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -352,38 +379,45 @@ a:visited
   }
   
   .product_card .details .card-name {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-bottom: 10px;
     color: #222;
+  }
+  .card-name{
+    width: 240px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
   }
   
   .product_card .details .price {
     display: block;
-    margin-bottom: 10px;
-    font-size: 1.4rem;
+    margin-bottom: 4%;
+    font-size: 1.2rem;
     color: #000000;
   }
   
   
-
-  .card {
-    position: static;
-  }
-  
-  .buttons{
-    padding: 12px;
+.buttons{
+    padding: 5%;
     color: white;
     background-color: #000000;
     cursor: pointer;
-    width: 6.8pc;
-    align-items: center;
+    width: 7pc;
     font-size: 15px;
+    float: left;
     border-radius: 10px;
     text-decoration: none;
+   
+}
+
+.bidcolor{
+    color: #000;
+}
+
+.buttons_space{
+    width: 80%;
     display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    justify-content: center;
-    margin-right: 10px; /* optional spacing between buttons */
-    padding: 5px 10px;
+    justify-content: space-around;
 }
