--- a/templates/cart.html
+++ b/templates/cart.html
@@ -23,6 +23,47 @@
   </head>
 
 <body>
+  <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Ubuntu&display=swap" rel="stylesheet">
+  <header>
+    <nav class="navbar">
+      <ul>
+  
+        <li id="a1"><b>CDSLite</b></li>
+        <li id="a2" class="searching">
+          <form>
+              <input type="text" class="search-box" placeholder="Search products">
+              <button id="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                  </svg>
+              </button>
+          </form>
+          </li>
+          <li id="a3"><a href="{{ url_for('index') }}">Bid</a></li>
+          <li id="a3"><a href="{{ url_for('Barter') }}">Barter</a></li>
+          <li id="a3"><a href="{{ url_for('merchandise') }}">Merchandise</a></li>
+          <li id="a3"><a href="/index/shopping_cart"><img src="/static/image/cart.png" alt="" class="carim"></a></li>
+          <li id="a3">
+              <div class="profile_dropdown">
+                  <button class="profile"><img src="/static/image/user.png" class="carim1" alt=""></button>
+                  <div class="profile-content">
+                      <a href="/read_user">Edit Profile</a>
+                      <a href="{{ url_for('product') }}">Add Product</a>
+                      <a href="{{ url_for('myproducts') }}">My Product</a>
+                      <a href="#">My order</a>
+                      <a href="/logout">log Out</a>
+                      <a href="{{ url_for('delete_user') }}" id="delete_user">Delete Account</a>   
+                  </div>
+              
+              </div>
+            
+          </li>
+      </ul>
+    </nav>
+    
+  </header>
   
    
       <section>
@@ -46,15 +87,12 @@
             <div class="row">
               <div style="width: 33% !important;" class="col-md-4">
                 <img class="img-sz" style="height:200px" src="{{url_for('get_image', product_id = item['ProductID'])}}">
-                <img class="img-sz" style="height:200px" src="{{url_for('get_image', product_id = item['ProductID'])}}">
               </div>
-              <div style="padding:10px 0px;width: 50% !important;" class="col-md-6">
-                <h5 class="mid2-sz" style="font-weight: 500!important;margin:0!important">{{ item['ProductName'] }}</h5>
+              <div style="padding:10px 0px;width: 45% !important;" class="col-md-6">
+                <h4 class="mid2-sz" style="font-weight: 500!important;margin:0!important">{{ item['ProductName'] }}</h4>
                 <p class="mid3-sz" style="color:#058552;margin:0!important">In Stock</p>
-
-                <p class="mid3-sz" style="margin:0!important;"><span style="font-weight: 500">{{ item['Description'] }}</p>
-                <div style="display:flex;justify-content: flex-start;">
-                  <p class="mid3-sz" style="margin:0!important;margin-right:10px!important"><span style="font-weight: 500">Qty: {{ item['Quantity'] }}</span></p>
+                <div style="display:flex;justify-content: flex-start;"><br>
+                <p class="mid3-sz" style="margin:0!important;margin-right:10px!important"><span style="font-weight: 600">Qty: {{ item['Quantity'] }}</span></p>
                 </div>
                 <br>
                 <div style="display:flex;justify-content: flex-start;">
@@ -70,7 +108,6 @@
           </div>
           {% endfor %}
 
-        {}
         </div>
         <div style="width: 36% !important;" class="col-md-4">
           <div class="box-sz" style="padding:20px 30px;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
