--- a/static/css/barterproduct.css
+++ b/static/css/barterproduct.css
@@ -1,75 +1,93 @@
-*{
-    padding: 0;
-    margin: 0;
-}
-
+/*Navigation Bar*/
 html{
     height: 100%;
     width: 100%;
-  }
-  @keyframes ex{
-      0%{ 
-          margin-top: 400px;
-      }
-      100%{
-          margin-top: 0;
-      }
-  }
-  .navbar {
-      padding: 8px;
-      background-color: whitesmoke;
-      height: 2.8rem;
-      max-width: 100%;
-      box-shadow: 0 0 8px 0 grey;
-      position: -webkit-sticky; /* Safari */
-      position: sticky;
-      top:0;
-      animation: ex;
-      animation-duration: 0.5s;
-  }
-  .navbar ul{
-      left:1%;
-      display: flex;
-      width:100%;
-      list-style: none;
-      flex-wrap: nowrap;
-      font-family: 'Dongle', sans-serif;
-      font-size: 1.8rem;
-      max-height: 100%;
-      justify-content: space-between;
-  }
-  .navbar li{
-      margin-top: 0.16em;
-  }
-  .navbar a{
-      text-decoration: none;
-      color: black;
-  }
-  #a1{
-      margin-left: 1%;
-      color: black;
-  }
-  #a2{
-    margin-left:30%;
-  }
-  .navbar a:hover{
+}
+@keyframes ex{
+    0%{ 
+        margin-top: 400px;
+    }
+    100%{
+        margin-top: 0;
+    }
+}
+.navbar {
+    padding: 0.5% ;
+    padding-left: 5%;
+    padding-right: 2%;
+    position: relative;
+    display: flex;
+    background-color: #ccccff;
+    height: 3.5rem;
+    max-width: 100%;
+    box-shadow: 0 0 8px 0 grey;
+    justify-content: space-around;
+    top:0;
+    animation: ex;
+    animation-duration: 0.5s;
+}
+.navbar ul{
+
+    display: flex;
+    width:100%;
+    list-style: none;
+    justify-content: space-between;
+
+
+    font-family: 'Dongle', sans-serif;
+    font-size: 1.8rem;
+
+  
+}
+.navbar li{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+}
+.navbar a{
+    text-decoration: none;
+    color: black;
+}
+#a1{
+    color: black;
+}
+#a2{
+    margin-left: 30%;
+}
+.navbar a:hover{
     color: #646262;
-  }
-  .navbar form{
+}
+.carim
+{
+    
+    margin-top: 50%;
+   
+}
+.carim1
+{
+    width: auto;
+    height: 25px;
+    /* margin-bottom: 50%; */
+    margin-top: 70%;
+}
+.navbar form{
     top: 0;
     display: flex;
     flex-wrap: nowrap;
-  }
-  .search{
-    width: 500px;
-    display: flex;
-  }
-  
-  .search-box{
-    top:10%;
+    height: 2vw;
+    align-items: center;
+}
+/*.search{
+width: 500px;
+display: flex;
+}*/
+
+.search-box{
+    /*top:10%;*/
     width: 100%;
-    height: 17px;
-    padding: 10px;
+    height: 100%;
+    padding-left: 3%;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border: none;
@@ -77,13 +95,15 @@ html{
     background: white;
     color: #a9a9a9;
     outline: none;
-  }
-  
-  #search-btn{
-    top:10%;
+}
+
+#search-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 20%;
-    height: 17 px;
-    padding: 5px;
+    height: 100%;
+    padding: 8px;
     border: none;
     outline: none;
     cursor: pointer;
@@ -93,28 +113,32 @@ html{
     font-size: 15px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-  }
-  #a3 button{
+}
+#a3 button{
     border:none;
     background:none;
     cursor: pointer;
-  }
-  .search-box::placeholder{
+}
+.search-box::placeholder{
     color: #a9a9a9;
-  }
-  #login{
+}
+#login{
     display: none;
     width: 60%;
     border: 2px solid;
-  }
-
+}
+.login_karo
+{
+    position: relative;
+	transition: all 5s ease-in-out;
+    width: 30%;
+}
 
 /*Profile dropdown*/
 
 .profile
 {
     color: #000;
-    padding: 10px;
     font-size: 25px;
     border: none;
     font-family: 'Dongle', sans-serif;
@@ -180,7 +204,7 @@ html{
 {
     width: 80%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding: 50px 5vw;
 }
 .card
@@ -274,4 +298,11 @@ h1
     font-size: 20px;
     font-weight: 300;
     margin: 30px 0 10px;
+}
+
+.img_section{
+    width:40%;
+}
+.details_section{
+    width:50%;
 }
