--- a/static/css/myproduct.css
+++ b/static/css/myproduct.css
@@ -294,28 +294,23 @@ a:visited
     margin-bottom: 0.7rem;
 }
 */
-.buttons{
-    width: 47%;
-    float: left;
-    margin-left: 3%;
+.card{
     display: flex;
-    color: white;
+    background-color: #fff;
 }
-.button_correct {
-    color: white;
-}
-.product_container {
-    background-color: white;
-    display: flex;
+.product-container {
+    display:flex;
     flex-wrap: wrap;
-    justify-content: flex;
-    position: static;
+    justify-content: space-around;
   }
-  
+  body{
+    background-color: #ffffff;
+  }
   .product_card {
-    background-color: #f5f5f5;
+    background-color: #f3f3ff;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
     width: 300px;
+    height: 450px;
     margin-top: 2vw;
     margin-bottom: 2vw;
     margin-right: 1vw;
@@ -324,24 +319,23 @@ a:visited
     overflow: hidden;
     display: inline-block;
   }
-  
+
   .product_card .image {
-    width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
   .product_card .image img {
-    max-width: 100%;
-    max-height: 100%;
+    margin-top: 20px;
+    width: 260px;
+    height: 260px;
+    border-radius: 10px;
   }
   
   .product_card .details {
-    padding: 20px;
+    padding: 30px;
     display: flex;
-    background-color: #f3f3ff;
     flex-direction: column;
     align-items: center;
   }
@@ -352,41 +346,47 @@ a:visited
   }
   
   .product_card .details .card-name {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-bottom: 10px;
     color: #222;
+  }
+  .card-name{
+    width: 240px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
   }
   
   .product_card .details .price {
     display: block;
-    margin-bottom: 10px;
-    font-size: 1.4rem;
+    margin-bottom: 4%;
+    font-size: 1.2rem;
     color: #000000;
   }
   
-  
-
-  .card {
-    position: static;
-  }
-  
-  .buttons{
-    padding: 12px;
+.button_class{
+    display: flex;
+}
+.buttons{
+    padding: 5%;
     color: white;
-    background-color: #000;
+    background-color: #000000;
     cursor: pointer;
-    width: 5.8pc;
-    align-items: center;
+    width: 5pc;
     font-size: 15px;
+    float: left;
     border-radius: 10px;
     text-decoration: none;
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    justify-content: center;
-    margin-right: 7px; /* optional spacing between buttons */
-    padding: 5px 10px;
+    margin: 2%;
 }
-.button_class{
-    display:flex;
+
+.bidcolor{
+    color: #000;
+}
+
+.buttons_space{
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
 }
